karma8 discovery: grpc.api.namespaces
